<resources>
    <string name="app_name">CookEasier</string>
    <string name="title_home">Recipes</string>
    <string name="title_dashboard">Conversions</string>
    <string name="title_notifications">Search</string>
    <string name="title_activity_hash">hash</string>
    <string name="bacon">Cut the 8 pieces of bacon\n
        into little pieces\n
        With your cast iron,\n
        fry bacon until crispy</string>
    <string name="pepper">Dice 8 potatoes into cubes\n
    Dice 1/2 onion\n
    Dice 1 red pepper\n
    Add 2tbps of olive oil to cast iron\n
    Add diced vegetables\n
    Cook until soft</string>
    <string name="milk">Return cooked bacon\n
    Mix in 1 cup heavy cream\n
    Mix in 1 teaspoon of salt\n
    Mix everything together</string>
    <string name="cheese">Mix in 1 cup shredded cheese\n
    Mix in 1/4 cup green onion</string>
    <string name="hashFinal">Make 4 hole\n
    Add in 4 eggs\n
    Place in 350 oven for 10 minutes
    </string>
    <string name="dry">Mix all dry ingredients\n
    2 cups flour\n
    2 tsp baking powder\n
    1/2 tsp baking soda\n
    1/4 cup sugar\n
    1.5 tsp salt</string>
    <string name="wet">Mix all wet ingredients\n
    1.5 cups buttermilk\n
    3 eggs\n
    6 tbsp melted butter\n
    2 tsp vanilla extract</string>
    <string name="mix">Mix wet and dry ingredients\n
    Its okay if the batter is lumpy</string>
    <string name="heat">Heat cast iron\n
    Melt 1tbsp butter\n
    Make 3 pancakes\n
    With 1/2 of batter each\n
    Wait for bubbles and flip</string>
    <string name="finalPan">Stack and top as desired</string>
    <string name="capIng">Combine ingredients for sauce\n
    1/3 cup balsamic vinegar\n
    2 tbsp brown sugar\n
    1 garlic clove, minced\n
    3 tbsp olive oil\n
    </string>
    <string name="mixCap">Mix all ingredients</string>
    <string name="Cut">Cut up tomatoes\n
    and mozzarella\n
    Arrange on play like picture\n
    Salt and pepper</string>
    <string name="finalCap">Pour sauce over tomatoes and\n
    mozzarella</string>
    <string name="mushGarlic">Heat 2tbsp olive oil and\n
    4 tbsps butter in dutch oven\n
    Sir in 1 pound cut mushrooms\n
    And 4 cloves of garlic, minced</string>
    <string name="stock">Add 1 cup dry wine, reduce\n
    Add 1 cup chicken stock, reduce\n</string>
    <string name="cream">Add 1 cup cream, reduce\n
    Add 1/4 cup grated Parm\n</string>
    <string name="parsley">Add in 2tbsp parsley, chopped</string>
    <string name="noodles">Add in 1 pound of cooked rigatoni\n
    and Serve!</string>










    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>