<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1E3D1"
    tools:context=".rigatoni">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="200dp"
                        android:src="@drawable/rigin" />

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="4 tbsp butter" />
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="2tbsp olive oil"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="1 pound mushrooms"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="4 garlic cloves"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="1 cup dry white wine"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="1 cup chicken stock"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="1 cup heavy cream"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="1/4 parm cheese"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="1 pound rigatoni noodles"/>
                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="2 tbsp chopped parsley"/>
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="120dp"
                        android:src="@drawable/mushgarlic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text="@string/mushGarlic"/>
                </TableRow>
                <TableRow>
                    <Button
                        android:text="Play Instruction"
                        android:id="@+id/mushGarlic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="#789779"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="136dp"
                        android:layout_height="120dp"
                        android:src="@drawable/stock" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text="@string/stock" />
                </TableRow>
                <TableRow>
                    <Button
                        android:text="Play Instruction"
                        android:id="@+id/stock"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="#789779"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="120dp"
                        android:src="@drawable/cream" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text="@string/cream" />
                </TableRow>
                <TableRow>
                    <Button
                        android:text="Play Instruction"
                        android:id="@+id/cream"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="#789779"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="120dp"
                        android:src="@drawable/parsley" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text="@string/parsley" />
                </TableRow>
                <TableRow>
                    <Button
                        android:text="Play Instruction"
                        android:id="@+id/parsley"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="#789779"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="120dp"
                        android:src="@drawable/noodles" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text="@string/noodles" />
                </TableRow>
                <TableRow>
                    <Button
                        android:text="Play Instruction"
                        android:id="@+id/noodles"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="#789779"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>